# ghuntley

./: .envrc  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .imgbotconfig  .pre-commit-config.yaml  Makefile  README.md  default.nix  nix.conf
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: auto-approve.yml  auto-merge.yml  build.yml  codeql.yml  depot-src-update.yml  niv-updater.yml  ops-dns-apply.yml  ops-dns-plan.yml  services-dev-ghuntley-templates-push.yml  test.yml
docs/: install-zfs.md
docs/hunspell/: dictionary.txt
dotfiles/: home.nix
nix/bufCheck/: default.nix
nix/buildGo/: default.nix
nix/buildHaskell/: default.nix
nix/buildkite/: default.nix  fetch-parent-targets.sh
nix/escapeExecline/: default.nix
nix/getBins/: default.nix  tests.nix
nix/lazy-deps/: default.nix
nix/readTree/: README.md  default.nix
nix/runExecline/: default.nix  runExecline.nix  tests.nix
nix/runTestsuite/: default.nix
nix/yants/: README.md  default.nix
ops/: nixos.nix
ops/dns/: .terraform.lock.hcl  main.tf  (+7 more)
patterns/: testing
services/: com-ghuntley-fediverse.nix  com-ghuntley.nix  dev-ghuntley.nix
teltonika/: README.md
tools/: depot-addlicense.nix  depot-deps.nix  depot-fmt.nix  depot-precommit.nix  depot-src-add.nix  depot-src-drop.nix  depot-src-update.nix  depot-src.nix  hash-password.nix  shell-alias-deploy-dns.nix  shell-alias-deploy-nixos.nix  shell-alias-lg.nix  shell-alias-z.nix  shell-aliases.nix
tools/cheddar/: Cargo.toml  README.md  build.rs  default.nix
tools/cheddar/src/: lib.rs  tests.rs
(+198 files in other folders)
