# Copyright (c) 2019 Vincent Ambo
# Copyright (c) 2020-2021 The TVL Authors
# SPDX-License-Identifier: MIT

[package]
name = "cheddar"
version = "0.2.0"
authors = ["Vincent Ambo <mail@tazj.in>"]
edition = "2018"

[dependencies]
clap = "2.33"
comrak = "0.17"
lazy_static = "1.4"
rouille = "3.5"
syntect = "4.5.0"
serde_json = "1.0"
regex = "1.4"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]
